# routes/users.js
@@ -3,6 +3,8 @@ const router = express.Router();
 const User = require('../models/User');
 const Account = require('../models/Account');
 const { check, validationResult } = require('express-validator');
+const {verifyToken} = require('../middlewares');
+const Sessions = require('../models/Session');
 
 //registers an user
 router.post('/', async (req, res) => {
@@ -23,6 +25,44 @@ router.post('/', async (req, res) => {
         res.json(savedUser);
     } catch (e) {
         res.statusCode = 400
+        res.json({error: e.message});
+    }
+});
+
+// Account details
+router.get('/account', verifyToken, async (req, res) => {
+    try {
+
+        // Get a specific users session token
+        const sessionId = req.headers.authorization.split(' ')[1]
+
+        // Find a session with the provided Id
+        const session = await Sessions.findOne({ _id:sessionId });
+
+        const user = await User.findOne({_id: session.userId}).select({ "name": 1, "username": 1, "password": 1, "_id": 0 });
+
+        if (!user) {
+            res.status(404).json({error: "User not found"})
+        }
+
+        const userAccount = await Account.findOne({user: session.userId}).select({ "account_number": 1, "balance": 1, "currency": 1, "user": 1, "_id": 0 });
+
+        if (!userAccount) {
+            res.status(404).json({error: "Account not found"})
+        }
+
+        res.status(200).json({
+            name: user.name,
+            username: user.username,
+            account: [{
+                account_number: userAccount.account_number,
+                balance: userAccount.balance,
+                currency: userAccount.currency
+            }]
+        });
+
+    } catch (e) {
+        res.statusCode = 500
         res.json({error: e.message});
     }
 });
